--- a/_posts/2022-01-14-Test-blog.md
+++ b/_posts/2022-01-14-Test-blog.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "My frist blog!!!"
+title:  "Test blog"
 date:   2022-01-14 23:06:34
-categories: blog
+categories: blog-test
 comments: true
 ---
 # Hellow,world!!!
