--- a/_posts/2022-01-14-Test.md
+++ b/_posts/2022-01-14-Test.md
@@ -2,8 +2,7 @@
 layout: post
 title:  "Test"
 date:   2022-01-14 23:06:34 
-categories: Test
-comments: true
+category: Test
 ---
 # Hellow,world!!!
 调试OK.  
@@ -13,3 +12,4 @@ comments: true
 现在这个应当是功能很完备了，我也可以及时上传我的博客。  
 
 感谢 [LiXizhi](http://lixizhi.github.io) 提供的模板，非常感谢！！！
+
